- Updated with java 11 features